# sqsl

./: .gitignore  COPYING  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  linkslist
aubit4gl/: Makefile.am  Makefile.in  cbytc.c  ccmpc.h  cfnmc.h  chstc.h  clddc.c  cldpc.c  cldpc.h  crqfc.c  crqfc.h  crqxd.h  crqxp.h  crxcc.h  crxoc.c  crxuc.h  crxxc.c  crxxd.h  csqic.c  csqpc.c  csqpy.c  csqrc.h  ctypc.h
aubitdemo/: Makefile.am  Makefile.in  ccnvc.c  cfnml.4gh  cfnml.4gl  cmatc.c  cshlc.c  csql.txt  csqll.4gh  csquc.c  cstrc.c  cstrl.4gl  ctxtl.4gl  curses  curses.msg  curses.txt  expw.per  hl1w.per  hl2w.per  hl3w.per  hl4w.per  idefl.4gh  ierrl.4gl  iexpl.4gl  ihorm.4gl  iminv.4gl  iml2h.4gl  imlth.4gl  imnhl.4gl  imnuc.c  imnul.4gl  ipanl.4gl  ishl.txt  ishll.4gl  isqlg.4gl  isqlv.4gl  itedl.4gl  iun2h.4gl  iunih.4gh  iunih.4gl  (+5 more)
cb/: Makefile.am  Makefile.in  cb.c  cb.h  decode.c
cli/: Makefile.am  Makefile.in  args.c  cli.c  csqmc.c  csqmc.h  csquc.c
db2cli/: Makefile.am  Makefile.in  db2api.y  db2cli.c  db2cli.h
db2esql/: Makefile.am  Makefile.in  csqdc.ec
db2sqc/: Makefile.am  Makefile.in  db2api.c  db2api.y  db2src.h  db2src.sqc
demo/: Makefile.am  Makefile.in  columns.sqsl  database.sqsl  indexes.sqsl  migrate.sqsl  tables.sqsl  users.sqsl  workload1.sqsl  workload2.sqsl
doc/: Makefile.am  Makefile.in  cb.txt  clients.htm  clients.txt  db2cli.txt  db2sqc.txt  demo.htm  demo.txt  fglpp.txt  json.txt  net.txt  solid.txt  sqsl.htm  sqsl.txt  sqslref.htm  sqslref.txt
i4gl/: Makefile.am  Makefile.in  cascc.c  cascc.h  ccmnc.c  ccmnc.h  cexpc.c  cexpc.h  cfioc.c  cfioc.h  chstc.c  cldec.c  crqxc.c  crsxc.c  crsxc.h  crxcc.c  crxfc.c  crxfc.h  crxoc.h  crxuc.c  crxvc.c  crxvc.h  crxxp.h  csqec.h  csqhc.h  csqic.c  csqpc.h  csqpy.y  cxslc.h
i4gldemo/: Makefile.am  Makefile.in  ccnvc.c  cfnml.4gh  cfnml.4gl  cmatc.c  cshlc.c  csql.txt  csqll.4gh  csquc.c  cstrc.c  cstrl.4gl  ctxtl.4gl  curses  curses.msg  curses.txt  expw.per  hl1w.per  hl2w.per  hl3w.per  hl4w.per  idefl.4gh  ierrl.4gl  iexpl.4gl  ihorm.4gl  iminv.4gl  iml2h.4gl  imlth.4gl  imnhl.4gl  imnuc.c  imnul.4gl  ipanl.4gl  ishl.txt  ishll.4gl  isqlg.4gl  isqlv.4gl  itedl.4gl  iun2h.4gl  iunih.4gh  iunih.4gl  (+5 more)
ifmx/: Makefile.am  Makefile.in  csqdc.ec
ifmx4/: Makefile.am  Makefile.in  csqdc.c
json/: Makefile.am  Makefile.in  json.c
m4/: ax_have_qt.m4
net/: Makefile.am  Makefile.in  socket.c
oslib/: Makefile.am  Makefile.in  cosdc.h  coslc.c  coslc.h
qtdemo/: Makefile.am  Makefile.in  args.c  csqmc.c  csqmc.h  moc_qtdemo.cpp  qrc_resources.cpp  qtdemo  qtdemo.cpp  qtdemo.h  qtdemo.pro  qtdemo.ui  resources.qrc  ui_qtdemo.h
solid/: Makefile.am  Makefile.in  solid.c
sqsl/: Makefile.am  Makefile.in  cascc.c  cascc.h  ccmnc.c  ccmnc.h  ccmpc.h  cexpc.c  cexpc.h  cfioc.c  cfioc.h  cfnmc.h  chstc.c  chstc.h  clddc.c  cldec.c  cldpc.c  cldpc.h  crqfc.c  crqfc.h  crqxc.c  crqxd.h  crqxp.h  crsxc.c  crsxc.h  crxcc.c  crxcc.h  crxfc.c  crxfc.h  crxoc.c  crxoc.h  crxuc.c  crxuc.h  crxvc.c  crxvc.h  crxxc.c  crxxd.h  crxxp.h  csqec.h  csqhc.h  (+7 more)
test/: Makefile.am  Makefile.in  aggregate.out  aggregate.sqsl  arith.out  arith.sqsl  control.out  control.sqsl  format.out  format.sqsl  ifmx.out  ifmx.sqsl  pattern.out  pattern.sqsl  regex.out  regex.sqsl  simple.out  simple.sqsl  test_runner.sh
tools/: Makefile.am  Makefile.in  esqlcyg  fglpp  ldcyg  yacc
tools/mvs/: Makefile.am  Makefile.in  db2esql.bat  ifmx.bat  solid.bat.in
