#	MAKEFILE.am - Documentation
#
#	The Structured Query Scripting Language
#	Copyright (C) 1992-2017 Marco Greco (marco@4glworks.com)
#
#	Initial release: Feb 05
#	Current release: Mar 17
#
#	This library is free software; you can redistribute it and/or
#	modify it under the terms of the GNU Lesser General Public
#	License as published by the Free Software Foundation; either
#	version 2.1 of the License, or (at your option) any later version.
#
#	This library is distributed in the hope that it will be useful,
#	but WITHOUT ANY WARRANTY; without even the implied warranty of
#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#	Lesser General Public License for more details.
#
#	You should have received a copy of the GNU Lesser General Public
#	License along with this library; if not, write to the Free Software
#	Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA

docdir = $(exec_prefix)/doc

dist_doc_DATA = sqsl.txt sqslref.txt sqsl.htm sqslref.htm \
		db2sqc.txt db2cli.txt solid.txt \
		clients.txt demo.txt clients.htm demo.htm \
		cb.txt json.txt net.txt
dist_noinst_DATA = fglpp.txt
